--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "mocha": "^6.2.2",
     "reload": "^3.0.3"
   },
   "scripts": {
-    "start": "reload index.html"
+    "start": "reload index.html",
+    "test": "mocha test"
   }
 }
