--- a/package.json
+++ b/package.json
@@ -3,12 +3,24 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "type":"module",
   "dependencies": {
+    "@types/chai": "^4.2.4",
+    "@types/mocha": "^5.2.7",
+    "chai": "^4.2.0",
+    "cross-env": "^6.0.3",
     "mocha": "^6.2.2",
-    "reload": "^3.0.3"
+    "nyc": "^14.1.1",
+    "reload": "^3.0.3",
+    "ts-node": "^8.4.1",
+    "typescript": "^3.6.4"
   },
   "scripts": {
     "start": "reload index.html",
-    "test": "mocha test"
+    "test": "cross-env TS_NODE_FILES=true mocha --exit --require ts-node/register --colors test/**/*.ts",
+    "tsc": "tsc",
+    "build": "tsc --build tsconfig.json",
+    "ts-node": "ts-node",
+    "coverage": "nyc yarn test"
   }
 }
