--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
   "name": "aos",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
   "license": "MIT",
-  "type":"module",
+  "type": "module",
   "dependencies": {
     "@types/chai": "^4.2.4",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
     "cross-env": "^6.0.3",
+    "lodash": "^4.17.15",
     "mocha": "^6.2.2",
     "nyc": "^14.1.1",
     "reload": "^3.0.3",
     "ts-node": "^8.4.1",
-    "typescript": "^3.6.4"
+    "typescript": "^3.6.4",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   },
   "scripts": {
     "start": "reload index.html",
     "test": "cross-env TS_NODE_FILES=true mocha --exit --require ts-node/register --colors test/**/*.ts",
-    "tsc": "tsc",
-    "build": "tsc --build tsconfig.json",
-    "ts-node": "ts-node",
-    "coverage": "nyc yarn test"
+    "coverage": "nyc yarn test",
+    "tsc": "tsc --build tsconfig.json",
+    "webpack": "webpack --config webpack.config.js",
+    "build" : "tsc; webpack"
   }
 }
