dev infrastructure in place

--- a/package.json
+++ b/package.json
@@ -11,19 +11,28 @@
     "cross-env": "^6.0.3",
     "lodash": "^4.17.15",
     "mocha": "^6.2.2",
+    "npm-watch": "^0.6.0",
     "nyc": "^14.1.1",
+    "pixi.js": "^5.1.5",
     "reload": "^3.0.3",
     "ts-node": "^8.4.1",
     "typescript": "^3.6.4",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
+  "watch": {
+    "build": {
+      "patterns": ["src"],
+      "extensions": "ts"
+    }
+  },
   "scripts": {
-    "start": "reload index.html",
+    "watch": "npm-watch",
+    "start": "yarn watch & reload index.html",
     "test": "cross-env TS_NODE_FILES=true mocha --exit --require ts-node/register --colors test/**/*.ts",
     "coverage": "nyc yarn test",
     "tsc": "tsc --build tsconfig.json",
     "webpack": "webpack --config webpack.config.js",
-    "build" : "tsc; webpack"
+    "build": "tsc; webpack"
   }
 }
