--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "include": [
-    "src"
+    "src",
   ],
   "exclude": [
       "node_modules",
@@ -10,6 +10,7 @@
     "module": "commonjs",
     "sourceMap": true,
     "target": "es2015",
-    "outDir":"./build"
+    "outDir":"./build",
+    "esModuleInterop": true 
   }
 }
